fix: 백업관련기능들 3차추가 자동백업, 사원정보수정시 백업, ignore백업파일추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# storage 디렉토리만 무시
+.hrbank/storage/
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
