feat: h2DB 1차구현

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //h2
+    runtimeOnly 'com.h2database:h2'
+
     // QueryDSL JPA
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
     // QueryDSL Annotation Processor
