--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,27 +10,31 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 
   #JPA
   jpa:
     hibernate:
-      ddl-auto: create #테이블 자동 생성/업데이트 옵션
+      ddl-auto: none #테이블 자동 생성/업데이트 옵션
     show-sql: true #실행되는 SQL 콘솔 출력 여부
     properties:
       hibernate:
-        format_sql: true #SQL문을 보기 좋게 줄바꿈/ 들여쓰기 출력
-        hightlight_sql: true #콘솔에 SQL키워드를 색상 강조
-        use_sql_comments: true # SQL에 JPQL/HQL 주석 추가(어떤 쿼리인지 표시)
+        format_sql: true
+        use_sql_comments: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
         physical_naming_strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
         jdbc.time_zone: UTC
+
   sql:
     init:
       platform: h2
       mode: always
-server:
-  port=${PORT:8080}:
+port: ${PORT:8080}
+
 # swagger
 springdoc:
   api-docs:
